# attribute-name-analyzer

./: .flake8  .gitignore  CONTRIBUTING.md  Jenkinsfile  MANIFEST.yml  Makefile  README.md  anv.ini  ci_requirements.txt  mypy.ini  openapi.json  pyproject.toml  requirements.txt  setup.cfg  test_requirements.txt  tox.ini
.github/workflows/: distribute.yml  test.yml
attribute_name_analyzer/: __main__.py
attribute_name_validator/: ATTRIBUTE_NAMING_GUIDELINES_AND_ANALYSIS_REPORT_USAGE.html  CATALOG.xlsx  __main__.py  analyze.py  model.py  utilities.py
documentation/: ATTRIBUTE_NAMING_GUIDELINES_AND_ANALYSIS_REPORT_USAGE.md  AttributeNameValidator.drawio  CONTRIBUTING.md  Catalog.xlsx  TASKLOG.md
reports/: ENTITY_1_REPORT.xlsx  ENTITY_2_REPORT.xlsx  NEW_TABLE_REPORT.xlsx
scripts/: remodel.py  update_catalog.py
tests/: test_attribute_name_validator.py
tests/entities/: ENTITY_1.csv  ENTITY_2.csv  NEW_TABLE.csv  TEST_ENTITIES.xlsx
