[metadata]
name = attribute-name-analyzer
version = 0.0.0
author_email = reddy.siddartha53@gmail.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alchemist-92/attribute-name-analyzer

[options]
python_requires = ~=3.7
include_package_data = True
packages =
	attribute_name_analyzer
install_requires =
	dataclasses~=0.8; python_version <= "3.6"

[options.entry_points]
console_scripts =
	attribute-name-analyzer = attribute_name_analyzer.__main__:main
    ana = attribute_name_analyzer.__main__:main

[options.package_data]
* = py.typed
